service.yaml
apiVersion: v1
kind: Service

metadata:
  name: level2-app-service

spec:
  selector:
    app: level2-app
  ports:
    - port: 80
      targetPort: 5000
