ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: level2-app-ingress

spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: level2-app-service
                port:
                  number: 80
